# predicting-crypto-price-movements

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deployment-dir/: cerebrium.toml  requirements.txt
deployment-dir/src/: baseline_model.py  data.py  train.py
src/: hyperparams.py  logger.py  paths.py
